# SiriusSam

./: .gitignore  CMakeLists.txt  calc.ipynb  main.cpp  plot.ipynb
data/: data_1026.rwg  data_18.rwg  data_258.rwg  data_66.rwg  data_plate.rwg  series.csv
examples/: dielectric.cpp  metal.cpp  plot_dielectric.ipynb  plot_metal.ipynb
include/: Electric.h  Geometry.h  Grid.h  Integrator.h  Magnetic.h  operatorK.h  operatorR.h
results/k=10/: f10.txt  j10.txt  j10_3012.txt  j10_768.txt  sigma10.txt  sigma10_3012.txt  sigma10_768.txt
results/k=4.1/: f4,1.txt  j4,1.txt  sigma4,1.txt
src/: Geometry.cpp  Grid.cpp  Integrator.cpp  Integrator.tpp
src/Magnetic/: Electric.cpp  Magnetic.cpp
src/operators/: operatorK.cpp  operatorR.cpp
test/: test.cpp
